<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rotationX="0"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:backgroundTint="#000000"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingRight="60dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView10"
        app:layout_constraintVertical_bias="0.439" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:backgroundTint="#000000"
        android:ems="10"
        android:hint="@string/id_room_number"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingRight="60dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        app:layout_constraintVertical_bias="0.034" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#0FFFFFFF"
        android:backgroundTint="#000000"
        android:includeFontPadding="false"
        android:shadowColor="#000000"
        android:text="@string/login"
        android:textColor="#000000"
        app:backgroundTint="#000000"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
        app:layout_constraintVertical_bias="0.089"
        app:rippleColor="#000000"
        app:strokeColor="#000000"
        tools:text="@string/login" />


</androidx.constraintlayout.widget.ConstraintLayout>